# personal-chatbot

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  system_prompts.json  user_prompts.json
personal_chatbot/: chatbot_gr.py  chatbot_gui.py  llm_chain_manager.py  prompts_managers.py
tests/: test_proxy.py
