[tool.poetry]
name = "personal-chatbot"
version = "0.0.1"
description = "Personal AI chatbot based on Langchain linked with various LLM models"
authors = ["Oleg Mikhailovskii"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nltk = "^3.8.1"
python-dotenv = "^1.0.1"
langchain-anthropic = "^0.1.23"
langchain-cohere = "^0.2.2"
langchain-google-genai = "^1.0.9"
langchain-groq = "^0.1.9"
langchain-ollama = "^0.1.1"
langchain-openai = "^0.1.22"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
gradio = "^4.41.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
coverage = "^7.4.4"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
